--- a/dev/Tpl/src/main/webapp/app/views/bookListPage.html
+++ b/dev/Tpl/src/main/webapp/app/views/bookListPage.html
@@ -71,9 +71,9 @@
 			</table>
 		</div>
 
-		<div class="form-group col-md-3">
-						<button type="button" class="btn btn-hexacta-primary col-md-12" ng-click="linkToRegister()">Registrarse</button>
-					</div>
+		<!--div class="form-group col-md-3">
+			<button type="button" class="btn btn-hexacta-primary col-md-12" ng-click="linkToRegister()">Registrarse</button>
+		</div-->
 		
 	</div>
 
